<?xml version="1.0"?>
<package format="3">
  <name>yolo_integration</name>
  <version>0.0.0</version>
  <description>Package for YOLOv8 integration</description>
  <maintainer email="mohamed.ailas@gmail.com">moh</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>ultralytics</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ultralytics</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
